few updates in the elastic chapter
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@4734 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/elastic.tex
+++ b/2010/thesis/elastic.tex
@@ -2,8 +2,8 @@
 \def\FH{F^{\rm H}}
 \def\FCH{F^{\rm C+H}}
 
-\def\KL{Kudr\' at-Lokaj\' i\v cek}
-\def\KaL{Kudr\' at and Lokaj\' i\v cek}
+\def\KL{Kundr\' at-Lokaj\' i\v cek}
+\def\KaL{Kundr\' at and Lokaj\' i\v cek}
 \def\WY{West-Yennie}
 \def\WaY{West and Yennie}
 
@@ -17,7 +17,7 @@ ATLAS ALFA, TDR
 
 \chapter{Elastic scattering of protons}
 
-\fig{fig/pdf/el_scat_scheme.pdf}{el scat scheme}{The kinematics of equal-mass elastic scattering in the center-of-mass system. The labels give the four-momenta of the particles involved ($z$ axis is horizontal, $x$ vertical).}
+\fig{fig/pdf/el_scat_scheme.pdf}{el scat scheme}{The kinematical of equal-mass elastic scattering in the center-of-mass system. The labels give the four-momenta of the particles involved ($z$ axis is horizontal, $x$ vertical).}
 
 Let us start by defining our notation and terms used later on. A scattering of particles with equal mass $m$ in the center-of-mass (CMS) frame is sketched in \Fg{el scat scheme}. $E$ and $p$ stand for the CMS energy and momentum (we will always assume kinematics quantities are evaluated in the CMS frame, unless stated differently). $\th$ is the scattering angle in the CMS frame. The total scattering energy squared reads:
 \eqref{s = 4E^2 = 4p^2 - 4m^2 \approx 4p^2\ ,}{el s}
@@ -35,7 +35,7 @@ In principle, one more parameter (for example the azimuthal angle $\ph$ giving t
 
 In contrary, a very interesting quantity is the $t$-distribution of elastic events (at a fixed energy $s$). It can be expressed in the form of differential cross-section $\d\si/\d t$ (\TODO{which is moreover normalized}, see e.g. \TODO{...}). In the framework of quantum theory, the differential cross-section is related to the scattering amplitude $F(s, t)$ (see e.g. \TODO{...})
 \eqref{{\d\si\over\d t}(s) = {\pi\over s p^2} |F(s, t)|^2\ .}{el dsdt}
-This relation, in fact, fixes our normalization of the scattering amplitude. Its phase is fixed by writing the Optical Theorem (see e.g. \TODO{...})
+This relation, in fact, fixes our normalization of the scattering amplitude. Its phase is fixed by writing the optical theorem (see e.g. \TODO{...})
 \eqref{\si_{\rm tot}(s) = {4\pi\over p \sqrt{s}} \Im F(s, t = 0)\ .}{el si tot}
 
 In what follows, we will often drop the $s$ dependence of cross-sections and amplitudes, it will be tacitly assumed.
@@ -70,7 +70,7 @@ At present, the QCD is believed to be the best theory of strong interactions ava
 
 The authors picture the proton in an effective QFT model. They proposed a soliton solution with a mass comparable to the one of proton. This soliton divides the proton into two distinct layers: an outer cloud of quark-antiquark condensate and an inner core of topological charge. Later on, a third, the inner-most layer has been added -- a valence-quark bag. These three layers give rise to three mechanisms contributing to elastic proton-proton scattering. Each of them drives the amplitude in a range of momentum-transfer $t$.
 
-For the lowest $|t|$ values ($\ls 0.5\un{GeV^2}$ at LHC energies) it is the diffraction scattering, originating from a glancing overlapping of the outer clouds. The corresponding scattering amplitude is formulated in the eikonal approach (see e.g. Ch.~6 in \bref{barone}), with a Gaussian-like profile function. For higher $|t|$ values (up to $\approx 5\un{GeV^2}$ at LHC energies) the leading mechanism is the core-core scattering. The QFT model suggests that it is mediated by $\rm\om$, behaving as an elementary particle (not like a Regge pole in many other models). For even higher values of $|t|$, the scattering is probing the inner-most layer of valence quarks. Their spatial distribution is assumed to fall off exponentially as departing from nucleon's center. There are two alternatives for the interaction of two valence quarks. In the first one (we will refer to it as HP), the quarks interact via hard pomeron (gluon ladders in BFKL). In the second (LxG), the interaction is mediated by the low-$x$ gluons that surround the valence quarks.
+For the lowest $|t|$ values ($\ls 0.5\un{GeV^2}$ at LHC energies) it is the diffraction scattering, originating from a glancing overlapping of the outer clouds. The corresponding scattering amplitude is formulated in the eikonal approach (see e.g. Ch.~6 in \bref{barone}), with a Gaussian-like profile function. For higher $|t|$ values (up to $\approx 5\un{GeV^2}$ at LHC energies) the leading mechanism is the core-core scattering. The QFT model suggests that it is mediated by the $\rm\om$ meson, behaving as an elementary particle (not like a Regge pole in many other models). For even higher values of $|t|$, the scattering is probing the inner-most layer of valence quarks. Their spatial distribution is assumed to fall off exponentially as departing from nucleon's center. There are two alternatives for the interaction of two valence quarks. In the first one (we will refer to it as HP), the quarks interact via hard pomeron (gluon ladders in BFKL). In the second (LxG), the interaction is mediated by the low-$x$ gluons that surround the valence quarks.
 
 The model contains 19 parameters in the hard-pomeron version HP or 20 in the low-$x$ gluon version LxG.
 
@@ -110,15 +110,15 @@ We recall that all results presented in this section are due to the strong inter
 
 The first quantity to look at is the differential cross-section. It is shown in \Fg{el mod dsdt narrow,el mod dsdt large} (narrower and larger $|t|$ range). All the predictions are very similar up to the first dip/shoulder which occurs between $|t| = 0.4$ and $0.6\un{GeV^2}$. Up to this point, the cross-section falls off almost exponentially. The first dip is very shallow in the prediction by Islam et al., for $7\un{TeV}$ it is merely a shoulder. For this model this is the only structure on the cross-section curve (for both HP and LxG variants). On contrary, the other models predict secondary dips/shoulders. Their size and position is often quite different for the two energies shown, especially for higher $|t|$ values. The value of the differential cross-section at the first dip differs up to a factor $10$ between the models. More precisely, the models split into two groups with a similar value of the cross-section in the first dip -- Islam et al. (both variants) and Petrov et al. with 2 pomerons (lower cross-section) and Bourrely et al., Petrov et al. (3P) and Block et al. (higher value).
 
-\fig{fig/pdf/el_mod_dsdt_narrow.pdf}{el mod dsdt narrow}{Differential cross-section as predicted by the four models.}
+\fig{fig/pdf/el_mod_dsdt_narrow.pdf}{el mod dsdt narrow}{Differential cross-section as predicted by the four models, in the $|t|$ range $0$ to $5\un{GeV^2}$.}
 
-\fig{fig/pdf/el_mod_dsdt_large.pdf}{el mod dsdt large}{Differential cross-section as predicted by the four models.}
+\fig{fig/pdf/el_mod_dsdt_large.pdf}{el mod dsdt large}{Differential cross-section as predicted by the four models, in the $|t|$ range $0$ to $20\un{GeV^2}$.}
 
 \TODO{ref to TOTEM measurement}
 
 We have already said that all models predict almost exponential decrease of the cross-section for the lowest $|t|$ values. To evaluate this statement more precisely, it is useful to plot the exponential slope
 \eqref{B(t) = {\d\over \d t} \log {\d\si\over\d t}(t) = {\d\over \d t} \log |F(t)|^2\ .}{el B}
-Considering the total variation of $B(t)$ roughly from $-10$ to $30\un{GeV^2}$, the slope for $|t|$ values below the first dip could be thought of constant. But still, there are non-negligible variations. The highest slope is reached by the model of Islam et al. at $t=0\un{GeV^2}$ ($28$ and $31\un{GeV^{-2}}$ for $7$ and $14\un{TeV}$ respectively). For the other models, the slope has approximately a parabolic shape reaching the maximum just before the first dip and having the minimum on a half way. For both energies the lowest values are reached by the model of Bourrely et al. ($17.6$ and $18.9\un{GeV^{-2}}$), the highest by Block et al. ($24.7$ and $28.5\un{GeV^{-2}}$ for $7$ and $14\un{TeV}$ respectively).
+Considering the total variation of the slope $B(t)$ roughly from $-10$ to $30\un{GeV^2}$, the slope for $|t|$ values below the first dip could be thought of constant. But still, there are non-negligible variations. The highest slope is reached by the model of Islam et al. at $t=0\un{GeV^2}$ ($28$ and $31\un{GeV^{-2}}$ for $7$ and $14\un{TeV}$ respectively). For the other models, the slope has approximately a parabolic shape reaching the maximum just before the first dip and having the minimum on a half way. For both energies the lowest values are reached by the model of Bourrely et al. ($17.6$ and $18.9\un{GeV^{-2}}$), the highest by Block et al. ($24.7$ and $28.5\un{GeV^{-2}}$ for $7$ and $14\un{TeV}$ respectively).
 
 The exponential slope is also useful for a localization of the dips/shoulders. A dip occurs whenever the slope crosses zero value (dotted line in the \Fg{el mod B}) from positive to negative values. When the slope gets close but does not cross zero actually (e.g. Islam et al. at $7\un{TeV}$), it signifies a shoulder.
 
@@ -179,7 +179,7 @@ Since the degree of the polynomial in the denominator is higher by two compared 
 
 \caption{Electromagnetic scattering in eikonal description}
 
-The eikonal approximation is a high-energy and low-scattering-angle (i.e. the kinematic domain of elastic scattering at the LHC) in QM (see e.g. Sc.~2.3 in \bref{barone} or Sc.~4.2.7 in \bref{formanek QM}). It relates the scattering amplitude $F(t)$ to the eikonal function $\de(b)$
+The eikonal approximation is a high-energy and low-scattering-angle (i.e. the kinematic domain of elastic scattering at the LHC) approximation in QM (see e.g. Sc.~2.3 in \bref{barone} or Sc.~4.2.7 in \bref{formanek QM}). It relates the scattering amplitude $F(t)$ to the eikonal function $\de(b)$
 \eqref{F(t) = {s\over 2i}\int\limits_0^\infty b\,\d b\,J_0(b\sqrt{|t|})\,\left( \e^{2i\de(b)} - 1 \right)}{el eik rep}
 (using the normalization of Cahn \bref{cahn82}). The \em{eikonal} function can be calculated from a potential $V(x, y, z)$
 \eqref{\de(b) = - {1\over 4 p_{\rm lab}} \int\limits_{-\infty}^{\infty} V(\vec b, z)\ \d z}{el eik app}
@@ -339,7 +339,7 @@ All the above doubts led us to verify Cahn's formula by a numerical calculation 
 
 Now we are going to compare the interference phase calculated with the eikonal, \WY{} and (corrected) \KL{} formulae (which includes the one of Cahn as the no-form factor limit). For simplicity, we will use one hadronic model only. We have chosen the model of Bourrely et al. It is one of the models giving a prescription for the hadronic eikonal $\de_{\rm H}(b)$ and therefore \Eq{el F CH eik} can be used directly.
 
-\Fg{el cic noff Psi} compares the interference phases with no form factor used. (On the next page we will show that the most reasonable comparison between $\Ph$ and $\Ps$ phases is $\Ps \sim - \Ph$). The simplified \WY{} formula does not provide a reasonable approximation above $|t| \gs 10^{-2}\un{GeV^2}$. \WY{} and \KL{} results are identical, as they should, however, they are significantly different from our eikonal calculation. We believe that this is a consequence of the $\O{\al}$ approximation in \Eq{el phase WY,el phase Cahn}.
+\Fg{el cic noff Psi} compares the interference phases with no form factor used. (On the next page we will show that the most reasonable comparison between $\Ph$ and $\Ps$ phases is $\Ps \sim - \Ph$). The simplified \WY{} formula does not provide a reasonable approximation above $|t| \gs 10^{-2}\un{GeV^2}$. \WY{} and corrected \KL{} results are identical, as they should, however, they are significantly different from our eikonal calculation. We believe that this is a consequence of the $\O{\al}$ approximation in \Eq{el phase WY,el phase Cahn}.
 
 \Fg{el cic diff Psi ff} compares the interference phases calculated with different form factors. It shows once again that the approximation of the simplified \WaY{} formula is not admissible for higher $|t|$ values.
 
