--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -77,6 +77,25 @@
 
 #------------------------------------------- ELASTIC MODELS -----------------------------------------
 
+@Article{islam67,
+      author         = "Islam, M.M.",
+      title          = "Impact parameter description of high energy scattering",
+	  journal		= "Lectures In Theoretical Physics Vol. Xb"
+      year           = "1967",
+	  address		= "New York"
+}
+
+@Article{islam75,
+      author         = "Islam, M.M.",
+      title          = "Impact Parameter Representation from Sommerfeld-Watson
+                        Transform",
+      journal        = "Nucl.Phys.",
+      volume         = "B104",
+      pages          = "511",
+      doi            = "10.1016/0550-3213(76)90115-2",
+      year           = "1976"
+}
+
 @Article{islam87,
 		author="M. M. Islam, V. Innocente, T. Fearnley and G. Sanguietti",
 		title="High energy $pp$ and $\bar p p$ Elastic Scattering and Nucleon Structure",
@@ -597,6 +616,20 @@
       pages          = "2241-2250",
       doi            = "10.1142/S021773239600223X",
       year           = "1996",
+}
+
+@Article{block96,
+  title = "Are we really measuring the phase of the nuclear scattering amplitude?",
+  author = "Block, M. M.",
+  journal = "Phys. Rev. D",
+  volume = "54",
+  number = "7",
+  pages = "4337--4343",
+  numpages = "6",
+  year = "1996",
+  month = "Oct",
+  doi = "10.1103/PhysRevD.54.4337",
+  publisher = "American Physical Society"
 }
 
 @Article{martin97,
