--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -1057,3 +1057,18 @@
       series       = "Springer Series in Statistics",
       year         = "2009",
 }
+
+@Article{bracco10,
+      author       = "Bracco, C and Assmann, R and Redaelli, S and Rossi, A and
+                      Wollmann, D",
+      title        = "Collimators and Beam Cleaning: First Results and Future
+                      Plans. oai:cds.cern.ch:1307577",
+	  publisher		= "Proccedings from the LHC beam commissioning workshop, Evian 2010"
+      year         = "2010",
+}
+
+
+@Url{mad-x,
+	title = "The MAD-X home page",
+	url = "http://wwwslap.cern.ch/mad/"
+}
